Incorrect WINDOWS ifdef in os::build_agent_function_name

XMLWordPrintable

    • b27
    • 24
    • b19
    • windows

        The os::build_agent_function_name code contains:

        #ifdef WINDOWS
              else { // Need to check for drive prefix e.g. C:L.dll
                if ((start = strchr(lib_name, ':')) != nullptr) {
                  lib_name = ++start;
                }
              }
        #endif

        but the build does not define WINDOWS, it defines _WINDOWS.

        Obviously testing is lacking in this area. However it only affects agents specified using a drive letter only, with no path e.g. C:foo.dll. It is unlikely many agents get specified this way.

              Assignee:
              David Holmes
              Reporter:
              David Holmes
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: