8353946: Incorrect WINDOWS ifdef in os::build_agent_function_name